# blitzy-exim

./: .gitignore  CODE_REVIEW.md  Cargo.toml  PROJECT_GUIDE.md  catalog-info.yaml  mkdocs.yml
.cargo/: config.toml
.github/workflows/: ci.yml
bench/: BENCHMARK_REPORT.md  run_benchmarks.sh
blitzy/documentation/: Project Guide.md  Technical Specifications.md
doc/: index.md
docs/: executive_presentation.html  index.md  project-guide.md  technical-specifications.md
exim-acl/: Cargo.toml
exim-acl/src/: conditions.rs  engine.rs  lib.rs  phases.rs  variables.rs  verbs.rs
exim-auths/: Cargo.toml
exim-auths/src/: cram_md5.rs  cyrus_sasl.rs  dovecot.rs  external.rs  gsasl.rs  heimdal_gssapi.rs  lib.rs  plaintext.rs  spa.rs  tls_auth.rs
exim-auths/src/helpers/: base64_io.rs  mod.rs  saslauthd.rs  server_condition.rs
exim-config/: Cargo.toml
exim-config/src/: driver_init.rs  lib.rs  macros.rs  options.rs  parser.rs  types.rs  validate.rs
exim-core/: Cargo.toml
exim-core/src/: cli.rs  context.rs  daemon.rs  main.rs  modes.rs  process.rs  queue_runner.rs  signal.rs
exim-deliver/: Cargo.toml
exim-deliver/src/: bounce.rs  journal.rs  lib.rs  orchestrator.rs  parallel.rs  retry.rs  routing.rs  transport_dispatch.rs
exim-dns/: Cargo.toml
exim-dns/src/: dnsbl.rs  lib.rs  resolver.rs
exim-drivers/: Cargo.toml
exim-drivers/src/: auth_driver.rs  lib.rs  lookup_driver.rs  registry.rs  router_driver.rs  transport_driver.rs
exim-expand/: Cargo.toml
exim-expand/src/: conditions.rs  debug_trace.rs  dlfunc.rs  evaluator.rs  lib.rs  lookups.rs  parser.rs  perl.rs  run.rs  tokenizer.rs  transforms.rs  variables.rs
exim-ffi/: Cargo.toml  build.rs
exim-ffi/src/: cyrus_sasl.rs  dlfunc.rs  dmarc.rs  fd.rs  gsasl.rs  krb5.rs  lib.rs  lmdb.rs  nis.rs  nisplus.rs  oracle.rs  pam.rs  perl.rs  process.rs  radius.rs  signal.rs  spf.rs  whoson.rs
exim-ffi/src/hintsdb/: bdb.rs  gdbm.rs  mod.rs  ndbm.rs  tdb.rs
exim-lookups/: Cargo.toml
exim-lookups/src/: cdb.rs  dbmdb.rs  dnsdb.rs  dsearch.rs  json.rs  ldap.rs  lib.rs  lmdb.rs  lsearch.rs  mysql.rs  nis.rs  nisplus.rs  nmh.rs  oracle.rs  passwd.rs  pgsql.rs  psl.rs  readsock.rs  redis.rs  spf.rs  sqlite.rs  testdb.rs  whoson.rs
exim-lookups/src/helpers/: check_file.rs  mod.rs  quote.rs  sql_perform.rs
exim-miscmods/: Cargo.toml
exim-miscmods/src/: arc.rs  dmarc.rs  dmarc_native.rs  dscp.rs  exim_filter.rs  lib.rs  pam.rs  perl.rs  proxy.rs  radius.rs  sieve_filter.rs  socks.rs  spf.rs  xclient.rs
exim-miscmods/src/dkim/: mod.rs  transport.rs
exim-miscmods/src/dkim/pdkim/: mod.rs  signing.rs
exim-routers/: Cargo.toml
exim-routers/src/: accept.rs  dnslookup.rs  ipliteral.rs  iplookup.rs  lib.rs  manualroute.rs  queryprogram.rs  redirect.rs
exim-routers/src/helpers/: change_domain.rs  expand_data.rs  get_errors_address.rs  get_munge_headers.rs  get_transport.rs  lookup_hostlist.rs  mod.rs  queue_add.rs  self_action.rs  ugid.rs
exim-smtp/: Cargo.toml
exim-smtp/src/: lib.rs
exim-smtp/src/inbound/: atrn.rs  chunking.rs  command_loop.rs  mod.rs  pipelining.rs  prdr.rs
exim-smtp/src/outbound/: connection.rs  mod.rs  parallel.rs  response.rs  tls_negotiation.rs
exim-spool/: Cargo.toml
exim-spool/src/: data_file.rs  format.rs  header_file.rs  lib.rs  message_id.rs
exim-store/: Cargo.toml
exim-store/src/: arena.rs  config_store.rs  lib.rs  message_store.rs  search_cache.rs  taint.rs
exim-tls/: Cargo.toml
exim-tls/src/: client_cert.rs  dane.rs  lib.rs  ocsp.rs  openssl_backend.rs  rustls_backend.rs  session_cache.rs  sni.rs
exim-transports/: Cargo.toml
exim-transports/src/: appendfile.rs  autoreply.rs  lib.rs  lmtp.rs  maildir.rs  pipe.rs  queuefile.rs  smtp.rs
src/: Makefile
